# show_parq

./: pyproject.toml  setup.py  show-parquet.desktop  show_parq.py
