# build with python -m build
[project]
    name = "show-parquet"
    description = "show parquet file"
    version = "0.22"
    dependencies = [
        "netCDF4",
        "numpy",
        "pandas",
        "pandastable",
        "pyarrow",
        "pandastable @git+https://github.com/handzsujt/pandastable.git",
    ]
    requires-python = ">=3.14"

[build-system]
    requires      = ["setuptools"]
    build-backend = "setuptools.build_meta"

[project.gui-scripts]
    show-parquet = "show_parq:main"
